--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,14 @@
     <name>redis-test</name>
     <url>https://github.com/gongfuboy/redis-test</url>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
